overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,5 @@
 }
 body{
   height: 100%;
+  overflow-x: hidden;
 }
